tests/ui/consts/miri_unleashed/const_refers_to_static_cross_crate.64bit.stderr
warning: shared reference of mutable static is discouraged
  --> $DIR/const_refers_to_static_cross_crate.rs:11:14
   |
LL |     unsafe { &static_cross_crate::ZERO }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^ shared reference of mutable static
   |
   = note: for more information, see issue #114447 <https://github.com/rust-lang/rust/issues/114447>
   = note: reference of mutable static is a hard error from 2024 edition
   = note: mutable statics can be written to by multiple threads: aliasing violations or data races will cause undefined behavior
   = note: `#[warn(static_mut_ref)]` on by default
help: shared references are dangerous since if there's any kind of mutation of that static while the reference lives, that's UB; use `addr_of!` instead to create a raw pointer
   |
LL |     unsafe { addr_of!(static_cross_crate::ZERO) }
   |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: constant refers to mutable data
  --> $DIR/const_refers_to_static_cross_crate.rs:10:1
   |
LL | const SLICE_MUT: &[u8; 1] = {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:36:9
   |
LL |         SLICE_MUT => true,
   |         ^^^^^^^^^

error: constant refers to mutable data
  --> $DIR/const_refers_to_static_cross_crate.rs:15:1
   |
LL | const U8_MUT: &u8 = {
   | ^^^^^^^^^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:44:9
   |
LL |         U8_MUT => true,
   |         ^^^^^^

error: constant refers to mutable data
  --> $DIR/const_refers_to_static_cross_crate.rs:20:1
   |
LL | const U8_MUT2: &u8 = {
   | ^^^^^^^^^^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:54:9
   |
LL |         U8_MUT2 => true,
   |         ^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/const_refers_to_static_cross_crate.rs:25:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constant accesses mutable global memory

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:61:9
   |
LL |         U8_MUT3 => true,
   |         ^^^^^^^

warning: skipping const checks
   |
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:11:15
   |
LL |     unsafe { &static_cross_crate::ZERO }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:11:15
   |
LL |     unsafe { &static_cross_crate::ZERO }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:16:15
   |
LL |     unsafe { &static_cross_crate::ZERO[0] }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:16:15
   |
LL |     unsafe { &static_cross_crate::ZERO[0] }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:16:15
   |
LL |     unsafe { &static_cross_crate::ZERO[0] }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:21:17
   |
LL |     unsafe { &(*static_cross_crate::ZERO_REF)[0] }
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:25:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:25:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:25:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:25:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:25:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0080`.
